--- a/index.html
+++ b/index.html
@@ -210,5 +210,50 @@
       </div>
     </div>
   </div>
+    <p class="phaselus">Phasellus a vitae iaculis magna.</p>
+    <p class="iaculis">Phasellus a vitae iaculis magna eleifend pulvinar velit odio.</p>
+    <div class="section6-padding">
+      <div class="section6">
+        <div class="section-6box">
+          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
+          <img src="./images/add.png"/>
+        </div>
+        <div class="section-6box">
+          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
+          <img src="./images/add.png"/>
+        </div>
+        <div class="section-6box">
+          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
+          <img src="./images/add.png"/>
+        </div>
+        <div class="section-6box">
+          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
+          <img src="./images/add.png"/>
+        </div>
+        <div class="section-6box">
+          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
+          <img src="./images/add.png"/>
+        </div>
+        <div class="section-6box">
+          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
+          <img src="./images/add.png"/>
+        </div>
+      </div>
+    </div>
+    <div class="section7-padding">
+      <div class="section7">
+        <div class="section7-text">
+          <p class="section7-article">Vulputate et pulvinar ethre Suspendisse tellus consecteur</p>
+          <div class="section7-whitebutton">
+            <p>Lorem ipsum</p>
+            <img src="./images/east.png"/>
+          </div>
+        </div>
+        <div class="section7-text-footer">
+          <p>Copyright © 2022 Lorem Ipsum.</p>
+          <p>Privacy Policy | Terms and Conditions</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
