--- a/index.html
+++ b/index.html
@@ -155,98 +155,116 @@
       </div>
     </div>
     <div class="section4-padding">
-    <div class="section4">
-      <img class="davidson-img" src="./images/Rectangle 4200.png" />
-      <div class="section-4box">
-        <p class="customers">What our customers thought?</p>
-        <p class="eusimda">
-          Euismod magna id purus eget nunc ligula suspendisse dui netus.
-          Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis.
-        </p>
-        <p class="davidson">Holly davidson</p>
-        <div class="imgs-flat">
-          <img src="./images/trending_flat.png"/>
-          <img src="./images/trending_flat (1).png"/>
+      <div class="section4">
+        <img class="davidson-img" src="./images/Rectangle 4200.png" />
+        <div class="section-4box">
+          <p class="customers">What our customers thought?</p>
+          <p class="eusimda">
+            Euismod magna id purus eget nunc ligula suspendisse dui netus.
+            Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis.
+          </p>
+          <p class="davidson">Holly davidson</p>
+          <div class="imgs-flat">
+            <img src="./images/trending_flat.png" />
+            <img src="./images/trending_flat (1).png" />
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="section5-padding">
-    <div class="section5">
-      <div class="section5-box-left">
-        <p class="customers-1">Cursus Integer consequat Tristique. </p>
-        <div class="section5-box-left-nav"> 
-        <img src="./images/check_circle.png"/>
-        <p class="section5-box-left-nav-text">Ac viverra sed risus praesent vulputate.</p>
-      </div>
-      <div class="section5-box-left-nav"> 
-        <img src="./images/check_circle.png"/>
-        <p class="section5-box-left-nav-text">Sollicitudin ornare tempus nulla varius pulvinar.</p>
-      </div>
-      <div class="section5-box-left-nav"> 
-        <img src="./images/check_circle.png"/>
-        <p class="section5-box-left-nav-text">Sollicitudin ornare tempus nulla varius pulvinar.</p>
-      </div>
-      <div class="section5-box-left-nav-1">
-        <div class="section5-box-left-nav"> 
-        <img src="./images/check_circle.png"/>
-        <p class="section5-box-left-nav-text">Varius pulvinar</p></div>
-        <div class="section5-box-left-nav"> 
-        <img src="./images/check_circle.png"/>
-        <p class="section5-box-left-nav-text">Natoque id tellus consectetur</p>
-      </div>
-      </div>
-      <div class="section5-box-left-nav"> 
-        <img src="./images/check_circle.png"/>
-        <p class="section5-box-left-nav-text">Ac viverra sed risus praesent vulputate.</p>
-      </div>
-      <div class="section5-button">
-        <p class="white-button-text">Lorem Ipsum</p>
-        <img src="./images/east.png"/>
+    <div class="section5-padding">
+      <div class="section5">
+        <div class="section5-box-left">
+          <p class="customers-1">Cursus Integer consequat Tristique.</p>
+          <div class="section5-box-left-nav">
+            <img src="./images/check_circle.png" />
+            <p class="section5-box-left-nav-text">
+              Ac viverra sed risus praesent vulputate.
+            </p>
+          </div>
+          <div class="section5-box-left-nav">
+            <img src="./images/check_circle.png" />
+            <p class="section5-box-left-nav-text">
+              Sollicitudin ornare tempus nulla varius pulvinar.
+            </p>
+          </div>
+          <div class="section5-box-left-nav">
+            <img src="./images/check_circle.png" />
+            <p class="section5-box-left-nav-text">
+              Sollicitudin ornare tempus nulla varius pulvinar.
+            </p>
+          </div>
+          <div class="section5-box-left-nav-1">
+            <div class="section5-box-left-nav">
+              <img src="./images/check_circle.png" />
+              <p class="section5-box-left-nav-text">Varius pulvinar</p>
+            </div>
+            <div class="section5-box-left-nav">
+              <img src="./images/check_circle.png" />
+              <p class="section5-box-left-nav-text">
+                Natoque id tellus consectetur
+              </p>
+            </div>
+          </div>
+          <div class="section5-box-left-nav">
+            <img src="./images/check_circle.png" />
+            <p class="section5-box-left-nav-text">
+              Ac viverra sed risus praesent vulputate.
+            </p>
+          </div>
+          <div class="section5-button">
+            <p class="white-button-text">Lorem Ipsum</p>
+            <img src="./images/east.png" />
+          </div>
+        </div>
+        <div class="section5-ilus">
+          <img
+            class="online"
+            src="./images/DrawKit Vector Illustration Black Friday & Online Shopping (7).png"
+          />
+        </div>
       </div>
     </div>
-      <div class="section5-ilus">
-        <img class="online" src="./images/DrawKit Vector Illustration Black Friday & Online Shopping (7).png"/>
-      </div>
-    </div>
-  </div>
     <p class="phaselus">Phasellus a vitae iaculis magna.</p>
-    <p class="iaculis">Phasellus a vitae iaculis magna eleifend pulvinar velit odio.</p>
+    <p class="iaculis">
+      Phasellus a vitae iaculis magna eleifend pulvinar velit odio.
+    </p>
     <div class="section6-padding">
       <div class="section6">
         <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
-          <img src="./images/add.png"/>
+          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
+          <img src="./images/add.png" />
         </div>
         <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
-          <img src="./images/add.png"/>
+          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
+          <img src="./images/add.png" />
         </div>
         <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
-          <img src="./images/add.png"/>
+          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
+          <img src="./images/add.png" />
         </div>
         <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
-          <img src="./images/add.png"/>
+          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
+          <img src="./images/add.png" />
         </div>
         <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
-          <img src="./images/add.png"/>
+          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
+          <img src="./images/add.png" />
         </div>
         <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel. </p>
-          <img src="./images/add.png"/>
+          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
+          <img src="./images/add.png" />
         </div>
       </div>
     </div>
     <div class="section7-padding">
       <div class="section7">
         <div class="section7-text">
-          <p class="section7-article">Vulputate et pulvinar ethre Suspendisse tellus consecteur</p>
+          <p class="section7-article">
+            Vulputate et pulvinar ethre Suspendisse tellus consecteur
+          </p>
           <div class="section7-whitebutton">
             <p>Lorem ipsum</p>
-            <img src="./images/east.png"/>
+            <img src="./images/east.png" />
           </div>
         </div>
         <div class="section7-text-footer">
