risus text changed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="section">
-        <p class="risus">risus praesent vulputate.</p>
+        <p class="risus">risus praesent vulputate. რომანა</p>
         <p class="cursus">Cursus Consequat Tristique.</p>
       </div>
       <div class="nav">
