accordion with javascript added

--- a/index.html
+++ b/index.html
@@ -228,34 +228,31 @@
     <p class="iaculis">
       Phasellus a vitae iaculis magna eleifend pulvinar velit odio.
     </p>
+    <!-- accprdion start-->
     <div class="section6-padding">
-      <div class="section6">
-        <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
-          <img src="./images/add.png" />
-        </div>
-        <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
-          <img src="./images/add.png" />
-        </div>
-        <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
-          <img src="./images/add.png" />
-        </div>
-        <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
-          <img src="./images/add.png" />
-        </div>
-        <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
-          <img src="./images/add.png" />
-        </div>
-        <div class="section-6box">
-          <p class="tempus">Pellentesque tempus sed phasellus vel.</p>
-          <img src="./images/add.png" />
-        </div>
+      <button class="accordion">Section 2</button>
+      <div class="panel">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
+<!-- 
+      <button class="accordion">Section 3</button>
+      <div class="panel">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <button class="accordion">Section 3</button>
+      <div class="panel">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <button class="accordion">Section 3</button>
+      <div class="panel">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <button class="accordion">Section 3</button>
+      <div class="panel">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div> -->
     </div>
+    <!-- accordion end -->
     <div class="section7-padding">
       <div class="section7">
         <div class="section7-text">
@@ -273,5 +270,21 @@
         </div>
       </div>
     </div>
+    <script>
+      var acc = document.getElementsByClassName("accordion");
+      var i;
+      
+      for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function() {
+          this.classList.toggle("active");
+          var panel = this.nextElementSibling;
+          if (panel.style.display === "block") {
+            panel.style.display = "none";
+          } else {
+            panel.style.display = "block";
+          }
+        });
+      }
+      </script>
   </body>
 </html>
